sgd/reproduction/playground/objects/SMAX_PS_Interface_Log__c.object
<CustomObject>
    <description>The object used to track Interface statuses</description>
    <fields>
        <fullName>SMAX_PS_Error_Event_Type__c</fullName>
        <description>To record the event when the error was observed.</description>
        <inlineHelpText>To record the event when the error was observed.</inlineHelpText>
        <label>Error Event Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Error_Message__c</fullName>
        <description>To store the message that will be sent to User when the integration was not successful.</description>
        <inlineHelpText>To store the message that will be sent to User when the integration was not successful.</inlineHelpText>
        <label>Error Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Error_Stack_Trace__c</fullName>
        <description>To store the stack trace in case of any technical error</description>
        <inlineHelpText>To store the stack trace in case of any technical error</inlineHelpText>
        <label>Error Stack Trace</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Error_Type__c</fullName>
        <description>This is a picklist with values.
•	Connection Error
•	Auth Error
•	Query Error
•	DML Error</description>
        <inlineHelpText>This is a picklist with values.
•	Connection Error
•	Auth Error
•	Query Error
•	DML Error</inlineHelpText>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connection Error</fullName>
                </value>
                <value>
                    <fullName>Auth Error</fullName>
                </value>
                <value>
                    <fullName>Query Error</fullName>
                </value>
                <value>
                    <fullName>DML Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Interface_Name__c</fullName>
        <description>Name of the process/job being executed. Set when the user initiated the interface.</description>
        <inlineHelpText>Name of the process/job being executed. Set when the user initiated the interface.</inlineHelpText>
        <label>Interface Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Interface_Status__c</fullName>
        <description>This is a picklist with values.
•	In Progress
•	Completed
•	Failed</description>
        <inlineHelpText>This is a picklist with values.
•	In Progress
•	Completed
•	Failed</inlineHelpText>
        <label>Interface Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Object_API_name__c</fullName>
        <description>Object API name will hold the name of the object that initiate the interface such as Work Order, Parts Order, Contract, etc.</description>
        <inlineHelpText>Object API name will hold the name of the object that initiate the interface such as Work Order, Parts Order, Contract, etc.</inlineHelpText>
        <label>Object API name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parent_ID__c</fullName>
        <description>Record ID that initiated the interface.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID that initiated the interface.</inlineHelpText>
        <label>Parent ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parts Order</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipLabel>Interface Log</relationshipLabel>
        <relationshipName>Interface_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Maintenance_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Interface Log</relationshipLabel>
        <relationshipName>Interface_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Success_Message__c</fullName>
        <description>To store the message that will be sent to User when the integration was successful.</description>
        <inlineHelpText>To store the message that will be sent to User when the integration was successful.</inlineHelpText>
        <label>Success Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Interface Log</relationshipLabel>
        <relationshipName>Interface_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interface Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Interface Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>